# event-sourcing-rs

./: Cargo.toml  Makefile
src/: main.rs
src/aggregates/: v1.rs
src/commands/: v1.rs
src/events/: v1.rs
src/handlers/: mod.rs  product_handlers.rs
src/responses/: v1.rs
