[package]
name = "event-sourcing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
axum = "~0.6.0"
axum-macros = "*"
hyper = { version = "*", features = ["full"] }
tower = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sonyflake = "0.2"
chrono = { version = "*", features = ["serde"] }
azure_data_cosmos = "*"
azure_core = "*"
reqwest = { version = "0.11.12", default-features = false }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3"